--- a/restaurant-service/.vscode/launch.json
+++ b/restaurant-service/.vscode/launch.json
@@ -41,7 +41,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "RunMyNestApp",
+            "name": "Debug-Restaurant-Service",
             "cwd": "${workspaceRoot}",
             "args": [ "${workspaceRoot}\\src\\main.ts"],
             "runtimeArgs": ["--nolazy", "-r", "ts-node/register"],
