--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     hostname: mongo1
     container_name: localmongo1
     image: mongo:4.0-xenial
-    expose:
+    ports:
       - 27017
     restart: always
     entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
@@ -12,7 +12,7 @@ services:
     hostname: mongo2
     container_name: localmongo2
     image: mongo:4.0-xenial
-    expose:
+    ports:
       - 27017
     restart: always
     entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
@@ -20,7 +20,7 @@ services:
     hostname: mongo3
     container_name: localmongo3
     image: mongo:4.0-xenial
-    expose:
+    ports:
       - 27017
     restart: always
     entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
