--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - sleep 15
   - bash pre-test.sh
   - npm install -g tsc
-  - cd ${TRAVIS_BUILD_DIR}/car-service && npm install && tsc && cd ./dist/src/ && cp ${TRAVIS_BUILD_DIR}/car-service/.env . && nohup node main.js &
+  - cd ${TRAVIS_BUILD_DIR}/car-service && npm install && tsc && cd ./dist/src/ && cp ${TRAVIS_BUILD_DIR}/car-service/.env . && node main.js 
   # - cd ${TRAVIS_BUILD_DIR}/apartment-service	&& npm install && npm start
   # - cd ${TRAVIS_BUILD_DIR}/restaurant-service	&& npm install && npm start
 script:
