added tsc version so this will actually work

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ before_script:
   - docker-compose up -d
   - sleep 15
   - bash pre-test.sh
-  - npm install -g tsc
-  - cd ${TRAVIS_BUILD_DIR}/car-service && npm install && tsc && cd ./dist/src/ && cp ${TRAVIS_BUILD_DIR}/car-service/.env . && node main.js 
+  - npm install -g tsc@3.0
+  - cd ${TRAVIS_BUILD_DIR}/car-service && npm install && tsc && cd ./dist/src/ && cp ${TRAVIS_BUILD_DIR}/car-service/.env . 
+  - cd ${TRAVIS_BUILD_DIR}/car-service/dist/src && node main.js &
   # - cd ${TRAVIS_BUILD_DIR}/apartment-service	&& npm install && npm start
   # - cd ${TRAVIS_BUILD_DIR}/restaurant-service	&& npm install && npm start
 script:
