--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ before_script:
   - sleep 15
   - bash pre-test.sh
   - npm install -g typescript@3.0
-  - cd ${TRAVIS_BUILD_DIR}/car-service && npm install && tsc && pwd && cd ${TRAVIS_BUILD_DIR}/car-service/dist/src/ && cp ${TRAVIS_BUILD_DIR}/car-service/.env . 
-  - cd ${TRAVIS_BUILD_DIR}/car-service/dist/src && node main.js &
+  - cd ${TRAVIS_BUILD_DIR}/car-service 
+  - npm install && tsc && cd ${TRAVIS_BUILD_DIR}/car-service/dist && cp ${TRAVIS_BUILD_DIR}/car-service/.env . 
+  - cd ${TRAVIS_BUILD_DIR}/car-service/dist && node main.js &
   # - cd ${TRAVIS_BUILD_DIR}/apartment-service	&& npm install && npm start
   # - cd ${TRAVIS_BUILD_DIR}/restaurant-service	&& npm install && npm start
 script:
