--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
   - nvm use 8
   - docker-compose up -d
   - sleep 15
+  - docker exec -ti localmongo1 mongo --eval 'config={"_id":"rs0","members":[{"_id":0,"host":"localmongo1:27017"},{"_id":1,"host":"localmongo2:27017"},{"_id":2,"host":"localmongo3:27017"}]}; rs.initiate(config)'
   - bash pre-test.sh
   - npm install -g typescript@3.0
   - cd ${TRAVIS_BUILD_DIR}/car-service 
